# toolbox-web

./: .env.example  .gitignore  MIGRATION.md  README.md  app.py  pyproject.toml  requirements.txt  toolbox-web-watch.path  toolbox-web-watch.service  toolbox-web.service  toolbox-web@.service
.github/: dependabot.yml
.github/workflows/: ci.yml
config/: commands.yaml.example  llama-coding-models.ini.example  llama-keys.txt.example  llama-models.ini.example  models.yaml.example
scripts/: drop_model.py  hf_check_updates.py  hf_link.py  install.sh  stop-server.sh  sync_models.py
static/css/: style.css
static/js/: app.js
templates/: index.html
tests/: test_smoke.py
toolbox_web/: __init__.py  commands.py  configfiles.py  models.py  presets.py  sessions.py  settings.py  stats.py  terminal.py  toolboxes.py  views.py
