[project]
name = "toolbox-web"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "flask>=3.1.3",
    "huggingface-hub>=1.23.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "ruamel-yaml>=0.19.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.21",
    "pytest>=8.0",
]

[tool.pytest.ini_options]
# The app isn't installed as a package (it's run from the repo root), so put the
# root on sys.path for `import toolbox_web`.
pythonpath = ["."]
testpaths = ["tests"]
